--- a/documentation/components/components-treegrid.asciidoc
+++ b/documentation/components/components-treegrid.asciidoc
@@ -93,6 +93,7 @@ treeGrid.addColumn(Project::getHoursDone).setCaption("Hours Done");
 treeGrid.setHierarchyColumn("name");
 ----
 
+[[components.treegrid.events]]
 == Listening to Events
 
 In addition to supporting all the listeners of the standard [classname]#Grid#, [classname]#TreeGrid# supports listening to the expansion and collapsing of items in its hierarchy.
@@ -106,3 +107,10 @@ treeGrid.addCollapseListener(event -> log("Item collapsed: " + event.getCollapse
 
 The return types of the methods `getExpandedItem` and `getCollapsedItem` are the same as the type of the [classname]#TreeGrid# the events originated from.
 Note that collapse listeners will not be triggered for any expanded subtrees of the collapsed item.
+
+[[components.treegrid.keyboard]]
+== Keyboard Navigation and Focus Handling in TreeGrid
+
+As opposed to [classname]#Grid#, individual cell are not focusable in [classname]#TreeGrid#, and only whole rows
+receive focus. User can navigate through rows with kbd:[Up] and kbd:[Down], collapse rows with kbd:[Left],
+and expand them with kbd:[Right].
